fix dropdown menu overflow bug when tables are shorter than the menu

--- a/app/assets/stylesheets/shared/datatables.scss
+++ b/app/assets/stylesheets/shared/datatables.scss
@@ -1,5 +1,4 @@
 .dataTables_wrapper {
-  overflow: hidden;
 
   .dataTable {
     margin-top: 0 !important;
